# masters-thesis

./: .gitignore  CMakeLists.txt  README.md  cpu_impl.cpp  gpu_impl.cu  tests.cu
Archive/neoclassical-cpu/: CMakeLists.txt
Archive/neoclassical-cpu/scripts/: plot_vfi.py
Archive/neoclassical-cpu/src/: cpu-plots.cpp  cpu_impl.cpp  main.cpp
Archive/neoclassical-gpu/: GPU-v1.cu  GPU-v2.cu
Archive/neoclassical-rl/: rl-solution.cpp
exe-time-measurements/: cpu.cpp  gpu.cu  rl.cpp
neoclassical-cpu/: CMakeSettings.json
neoclassical-cpu/scripts/: plot_vfi.py
neoclassical-cpu/src/: cpu_impl.cpp  main.cpp
neoclassical-gpu/: GPU-solution-v2.cu  GPU-solution-v3.cu  GPU-solution.cu  GPU-v2.cu  hello.cu
neoclassical-model/exe-time-measurements/: rl.cpp  rl2.cpp
neoclassical-model/plots/: cpu-plots.cpp  rl-plots.cpp
neoclassical-rl/: rl-solution.cpp
pension-model/: model.cpp
pension-model/cpu/: model.cpp
pension-model/gpu/: CMakeLists.txt  bellman_gpu.cu  bellman_gpu.cuh  cuda_bellman.cu  cuda_bellman.cuh  model_gpu.cpp  model_gpu.h
plots/: plot.py  plots.py
scripts/: plot_vfi.py
src/: cpu_impl.cpp  gpu_impl.cu  main.cu
